# LTBA

./: .gitignore  CITATION.cff  LICENSE_LTBA_REVIEW_BUNDLE.txt  LTBA_V4_FREEZE.md  LTBA_V4_TECHNICAL_NOTE_DRAFT.md  MANIFEST.txt  README.md  README_LTBA_V4.md  benchmark_smoke.json  ltba_general_benchmark_patch.sh  ltba_general_benchmark_report.json  ltba_general_benchmark_v1_report.json  ltba_general_benchmark_v1_rows.csv  ltba_general_benchmark_v2_patch.sh  ltba_general_benchmark_v2_rows.csv  ltba_general_benchmark_v2_summary.csv  ltba_general_benchmark_v3_summary.csv  ltba_general_benchmark_v3_timing_rows.csv  ltba_general_benchmark_v4_report.json  ltba_v4_freeze_docs_patch.sh  pyproject.toml  rebuild_ltba_v4_from_patches.sh  run_v4_benchmark.sh
archive/: README.md
benchmarks/: README.md  __init__.py  benchmark_v4.py  ltba_piecewise_comparison.py  ltba_real_kernel_adapter.py  use_case_pack_v1.py
docs/: BENCHMARK_SUMMARY.md  HOW_TO_REPRODUCE.md  LTBA_CLAIMS.md  LTBA_NOVELTY_STATEMENT.md  LTBA_OVERVIEW.md  LTBA_REVIEW_REQUEST.md  LTBA_V4_FREEZE.md  PUBLICATION_PLAN.md  README_LTBA_V4.md  USE_CASE_PACK_V1.md  USE_CASE_PACK_V1_FINDINGS.md  related_ideas.md  semantics.md
ltba/: __init__.py  components.py  core.py  piecewise_conversion.py  semantics.py
results/: README.md
review_packet/: REVIEW_REQUEST.md
scripts/: README.md  generate_use_case_findings.py  make_review_zip.sh  rebuild_ltba_v4_from_patches.sh  run_all_checks.sh  run_v4_benchmark.sh
tests/: test_benchmark_smoke.py  test_imports.py  test_ltba_core.py  test_ltba_piecewise_comparison_benchmark.py  (+2 more)
(+24 files in other folders)
