[project]
name = "ltba"
version = "0.1.0"
description = "Locality-Preserving Tagged Branch Algebra prototype"
readme = "README.md"
requires-python = ">=3.10"
authors = [
	{ name = "LTBA contributors" }
]
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = ["-q"]
testpaths = ["tests"]
pythonpath = ["."]
